--- a/RE4MP/RE4MP.vcxproj.filters
+++ b/RE4MP/RE4MP.vcxproj.filters
@@ -20,7 +20,7 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="RE$MP.h">
+    <ClInclude Include="RE4MP.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
