--- a/RE4MP/RE4MP.vcxproj
+++ b/RE4MP/RE4MP.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="RE4MP.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Cache.h" />
     <ClInclude Include="detours.h" />
     <ClInclude Include="hooks.h" />
     <ClInclude Include="Re4Detours.h" />
