--- a/RE4MP/RE4MP.vcxproj.filters
+++ b/RE4MP/RE4MP.vcxproj.filters
@@ -35,5 +35,8 @@
     <ClInclude Include="Re4Detours.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Cache.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
