--- a/RE4MP/RE4MP.vcxproj.filters
+++ b/RE4MP/RE4MP.vcxproj.filters
@@ -38,5 +38,8 @@
     <ClInclude Include="Cache.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
